# obsidian_search

./: .gitignore  config.example.json  config.json  package-lock.json  package.json  playwright.config.js  pyproject.toml
data/: meta.db  milvus-verify.db  milvus.db
docs/: playwright-e2e-setup.md
prd/: deep-research-report.md
scripts/: env.sh  run_cs_reference_eval.py  start.sh
scripts/data/: meta.db-shm
src/: pkg_resources.py
src/api/: schemas.py
src/app/: config.py  container.py  deps.py  main.py  models.py
src/evaluation/: __init__.py  cs_reference_eval.py
src/indexing/: cleaner.py  diff.py  embedder.py  embedder_openai.py  embedder_wanqing.py  parser.py  splitter.py  sync_service.py
src/obsidian_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/query/: __init__.py  query_expansion.py  ranker.py  retriever.py  service.py
src/storage/: milvus_repo.py  sqlite_repo.py
tests/: test_cleaner.py  test_cs_reference_eval.py  test_incremental_sync.py  test_parser.py  test_query_expansion.py  test_query_note_api.py  test_query_service_search.py  test_retrieval_quality.py
tests/e2e/: README.md  smoke.spec.js
tmp/cs_eval/: meta.db  milvus.db
tmp/cs_eval_online/: meta.db  milvus.db
tmp/cs_eval_online_real/: meta.db  milvus.db
tmp/cs_eval_threshold0/: meta.db  milvus.db
tmp/cs_eval_threshold0_fixed/: meta.db  milvus.db
tmp/cs_eval_tuned/: meta.db  milvus.db
tmp/grid_t000_a000_s000_p045/: meta.db  milvus.db
tmp/grid_t000_a002_s003_p045/: meta.db  milvus.db
tmp/grid_t000_a004_s006_p030/: meta.db  (+1 more)
web/: index.html
(+334 files in other folders)
